--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "node --test",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "test": "cross-env NODE_ENV=test node --test",
     "lint": "eslint ."
   },
   "keywords": [],
@@ -14,14 +14,20 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.20.0",
+    "express-async-errors": "^3.1.1",
     "mongoose": "^8.6.1"
   },
   "devDependencies": {
-    "eslint": "^8.2.0",
+    "@eslint/js": "^9.10.0",
+    "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.2",
-    "nodemon": "^3.1.4"
+    "globals": "^15.9.0",
+    "nodemon": "^3.1.4",
+    "supertest": "^7.0.0",
+    "typescript-eslint": "^8.5.0"
   }
 }
