--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@stylistic/eslint-plugin-js": "^2.8.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
@@ -24,7 +25,7 @@
     "@eslint/js": "^9.10.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-import": "^2.30.0",
     "globals": "^15.9.0",
     "nodemon": "^3.1.4",
     "supertest": "^7.0.0",
