--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -14,11 +14,13 @@
   "license": "ISC",
   "dependencies": {
     "@stylistic/eslint-plugin-js": "^2.8.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.20.0",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.1"
   },
   "devDependencies": {
